@@ -31,6 +31,10 @@ public class EntityTool extends BaseTool {
     public EntityTool(ERDesignerGraph aGraph) {
         super(aGraph);
     }
+    
+    public boolean isForceMarqueeEvent(MouseEvent event) {
+        return true;
+    }       
 
     @Override
     public void mousePressed(MouseEvent e) {
